# tuto-doc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: build_and_deploy  build_and_deploy.yml  lint.yml  unit_tests.yml
docs/: .gitignore  conf.py  glossary.rst  index.rst  installation.rst  references.bib
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: index.rst  plot.rst  transforms.rst
docs/tutorial/: configure.rst  docstrings.rst  examples.rst  ext_links.rst  glossary.rst  index.rst  references.rst  sphinx.rst  write.rst
docs/tutorial/api/: auto_summary.rst  docstrings.rst  index.rst  parse_docstrings.rst
docs/tutorial/deploy/: github_pages.rst  index.rst  read_the_docs.rst
docs/user_guide/: gif.rst  index.rst  intro.rst  multiple_plots.rst  plot.rst
examples/: plot_single_image.py
src/neuroplot/plot/: __init__.py
src/neuroplot/plot/multiple/: __init__.py  multiple_plot.py
src/neuroplot/plot/single/: __init__.py  gif.py  single_plot.py
src/neuroplot/transforms/: __init__.py  noise.py  rescale_intensity.py  to_orientation.py
tests/: conftest.py
tests/unittests/plot/multiple/: test_mutiple_plot.py
tests/unittests/plot/single/: test_gif.py  test_single_plot.py
tests/unittests/transforms/: test_transforms.py
